Implemented the grid template for the popular places (e.g. Home) page

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -10,13 +10,12 @@
   }
 }
 @mixin button{
-  
-  transition:0.5s;
+  transition: .5s;
   background-color: #CAD3C8;
   
   &:hover{
     color:#cd6133;
-    box-shadow:0.2em 0.3em black;
+    box-shadow: 0.2em 0.3em black;
     transform: translateY(-0.4em);
     background-color: #ccae62;
   }
