--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,22 +1,9 @@
 @mixin flex-nav {
   flex-flow: row wrap;
-  justify-content: center;
-
   list-style: none;
-  font-size: 1.2em;
-
+  font-size: 1.4em;
+  padding-left: 3.5em;
   li:not(:last-of-type) {
-    margin-right: 0.75em;
-  }
-}
-@mixin button{
-  transition: .5s;
-  background-color: #CAD3C8;
-  
-  &:hover{
-    color:#cd6133;
-    box-shadow: 0.2em 0.3em black;
-    transform: translateY(-0.4em);
-    background-color: #ccae62;
+    margin-right: 0.25em;
   }
 }
