--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -15,57 +15,78 @@ html {
 }
 
 .header {
-  padding: 2.5em;
+  padding: 1em;
   width: 100%;
-
-  color: #2C3A47;
-  background-color: #f7f1e3;
-
+  .title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .title-text__h1{
+      font-size: 2.5em;
+      margin-top: 0;
+      font-family: 'Myriad Pro', 'Myriad', helvetica, arial, sans-serif;
+      text-shadow: 0.1em 0.2em 0.3em #292929;
+      letter-spacing: 0.2em;
+      -webkit-text-stroke: 0.01em white;
+      margin: 0;
+      text-align: center;
+    }
+    .title-text__h3{
+      margin: 0;
+      text-align: center;
+    }
+        }
   .nav--main {
     @include flex-nav;
   }
-
-  li{
-    @include button;
+  li :hover {
     
-    padding:1.2em 3em ;
-    border: 1px solid black;
-    margin-top:0.5em;
-    margin-right:0.5em;
+    color:white;
+    background-color: black;
+  }
+  li{
+    padding:0.1em 0.5em ;
   }
 
   li a {
-    color: inherit;
+    color:black;
     text-decoration: none;
     text-align: center;
   }
 
   .nav--dropdown {
-    position: relative;
+
     display: inline-block;
-    left: 90%;
-    bottom: 3.5em;
-
+    font-size: 1.4em;
+   
     .dropbtn {
-      padding:2em 2.5em;
+    
+      padding-left: 1em;
       border:none;
-      
-      font-size: 100%;
-      color:black;
-      background-color:green;
     }
-
     .dropdown__content {
+      padding-left: 1em;
       position: absolute;
-      
-      a {
-        color: black;
-        padding: 0.8em 0.5em;
-        text-decoration: none;
-        display: block;
+      display: none;
+      transition: all .2s ease-in-out;
+      a{
+        
+        text-align: left;
+        background-color: #f9f9f9;
+        font-size: 1em;
+        display: inline-block;
       }
-    }
+     }
   }
+  .nav--dropdown:hover .dropdown__content {
+    display: inline-block;
+}
+.dropdown__content a:hover, .nav--dropdown:hover .dropbtn a{
+  background-color: black;
+  color: white;
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
 }
 
 .nav {
