--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -11,82 +11,145 @@ html {
   body {
     height: 100%;
     position: relative;
+
+    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+
+    .container {
+      height: 100%;
+      overflow-x: hidden;
+    }
   }
 }
 
 .header {
   padding: 1em;
   width: 100%;
-  .title{
+  position: relative;
+
+  color: hsl(210, 29%, 29%);
+  background-color: hsla(204, 70%, 53%, 0.3);
+
+  .title {
     display: flex;
     justify-content: center;
     align-items: center;
-    .title-text__h1{
-      font-size: 2.5em;
+
+    .title-text {
+      font-family: 'Droid Serif', Georgia, Times, serif;
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .title-text__h1 {
       margin-top: 0;
-      font-family: 'Myriad Pro', 'Myriad', helvetica, arial, sans-serif;
-      text-shadow: 0.1em 0.2em 0.3em #292929;
+      margin-bottom: .5em;
+      font-size: 1.7em;
       letter-spacing: 0.2em;
-      -webkit-text-stroke: 0.01em white;
-      margin: 0;
-      text-align: center;
     }
-    .title-text__h3{
-      margin: 0;
-      text-align: center;
+
+    .title-text__h3 {
+     color:	hsl(210, 29%, 65%);
+     text-align: center;
     }
-        }
-  .nav--main {
-    @include flex-nav;
-  }
-  li :hover {
-    
-    color:white;
-    background-color: black;
-  }
-  li{
-    padding:0.1em 0.5em ;
   }
 
-  li a {
-    color:black;
-    text-decoration: none;
-    text-align: center;
+  .nav--main {
+    @include flex-nav;
+    
+    li {
+      @include hover-effect-nav(10px, 10px);
+
+      &:hover {
+        a {
+          color:	hsl(28, 80%, 50%);
+        }
+      }
+      
+      padding: 0.1em 0.5em;
+      position: relative;
+      
+      a {
+        text-decoration: none;
+        text-align: center;
+        color: inherit;
+
+        transition: color .1s ease-in-out;
+      }
+    }
   }
 
   .nav--dropdown {
+    margin-left: 1em;
 
     display: inline-block;
     font-size: 1.4em;
    
-    .dropbtn {
-    
+    .dropdown__button {
       padding-left: 1em;
-      border:none;
-    }
-    .dropdown__content {
-      padding-left: 1em;
-      position: absolute;
-      display: none;
-      transition: all .2s ease-in-out;
-      a{
-        
-        text-align: left;
-        background-color: #f9f9f9;
-        font-size: 1em;
-        display: inline-block;
-      }
-     }
-  }
-  .nav--dropdown:hover .dropdown__content {
-    display: inline-block;
-}
-.dropdown__content a:hover, .nav--dropdown:hover .dropbtn a{
-  background-color: black;
-  color: white;
-  font-family: 'Open Sans Condensed', sans-serif;
-}
+      border: none;
+      
+      a {
+        @include hover-effect-nav(0, 0);
 
+        position: relative;
+        text-decoration: none;
+        color: inherit;
+
+        &:hover {
+          color: hsl(28, 80%, 50%);
+        }
+      }
+    }
+
+    &:hover .dropdown__button > a {
+      color: hsl(28, 80%, 50%);
+      &:before,
+      &:after {
+        opacity: 1;
+      }
+
+      &:before {
+        transform: translateX(-15px);
+      }
+  
+      &:after {
+        transform: translateX(15px);
+      }
+    }
+
+    .dropdown__content {
+      display: none;
+      position: absolute;
+      
+      transition: all .2s ease-in-out;
+      z-index: 1;
+
+      ul {
+        padding-left: 1em;
+        display: flex;
+        flex-flow: column nowrap;
+
+        background-color: hsla(204, 70%, 53%, 0.9);
+
+        li {
+          padding: .3em .3em .3em 0;
+
+          &:hover {
+            color: white;
+          }
+
+          a {
+            text-decoration: none;
+            color: inherit;
+          }
+        }
+      }
+    }
+
+    &:hover .dropdown__content {
+      display: inline-block;
+    }
+  }
 }
 
 .nav {
@@ -94,7 +157,8 @@ html {
 }
 
 .main-content,
-.places , .listings{
+.places, 
+.listings {
   height: 100%;
 }
 
@@ -140,11 +204,13 @@ html {
         grid-column: 1 / 2;
         grid-row: 4 / 5;
       }
-    }
+    }    
   }
 }
-.listings{
+
+.listings {
   padding: 2em 7em;
+
   .grid {
     height: calc(100% - 7em);
 
@@ -154,7 +220,6 @@ html {
     grid-column-gap: 0.3em;
     grid-auto-rows: 60%;
   }
-
 }
 
 .footer {
