--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -204,7 +204,80 @@ html {
         grid-column: 1 / 2;
         grid-row: 4 / 5;
       }
-    }    
+    }
+     
+    .card__content{
+      position: relative;
+      top: 25%;
+      .card__content--info{
+        li{
+          opacity:0;
+          font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+          text-decoration: none;
+          transition-property: all;
+          transition:  0.86s;
+          color: white;
+          text-align: center;
+          &:nth-of-type(1){
+            padding-left:10em;
+          }
+          &:nth-of-type(2){ 
+              padding-right: 10em;
+          }
+        }
+      }
+      .card__title{
+        opacity:0;
+        font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+        text-align: center;
+        padding-top: 10em;
+        text-decoration: none;
+        transition-property: all;
+        transition:  0.86s;
+        font-size: 1.5em;
+        color: white;
+      }
+    }
+    .card{
+    &:after{
+      content:'';
+      position: absolute;
+      top:0;
+      left:0;
+      width: 100%;
+      height: 100%;
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+      transition: 0.35s;
+      transform: rotate(25deg) scale3d(1,0,1);
+    }
+  }
+    .card:hover:after{
+        transform: rotate(45deg) scale3d(1,1,1);
+    }
+
+    .card:hover {
+      filter: grayscale(40%);
+      opacity: 0.7; 
+      .card__title{
+        opacity:1;
+        padding-top:0;
+        font-size:2.3em;
+      }
+      li{
+        opacity: 1;
+        font-size:1.2em;
+        &:nth-of-type(1){
+          padding-left: 0;
+          padding-top: 3em;
+        }
+        &:nth-of-type(2){ 
+            padding-top: 3em;
+            padding-right: 0;
+        }
+      }
+
+    }
   }
 }
 
