--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -55,3 +55,78 @@
     }
   }
 }
+@mixin hover-effect-photo($fontSizeTitle,$fontSizeContent,$paddingTop){
+  .card__content{
+    z-index:1;
+  position: relative;
+  top: 25%;
+  .card__content--info{
+    li{
+      opacity:0;
+      font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+      text-decoration: none;
+      transition-property: all;
+      transition:  0.86s;
+      text-align: center;
+      &:nth-of-type(1){
+        padding-left:10em;
+      }
+      &:nth-of-type(2){ 
+          padding-right: 10em;
+      }
+    }
+  }
+  .card__title{
+    opacity:0;
+    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+    text-align: center;
+    padding-top: 10em;
+    text-decoration: none;
+    transition-property: all;
+    transition:  0.86s;
+    font-size: 1.5em;
+    color: white;
+  }
+  }
+  .card{
+    &:after{
+      content:'';
+      position: absolute;
+      top:0;
+      left:0;
+      width: 100%;
+      height: 100%;
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+      transition: 0.35s;
+      transform: rotate(25deg) scale3d(1,0,1);
+    }
+    }
+    .card:hover:after{
+        transform: rotate(45deg) scale3d(1,1,1);
+    }
+    
+    .card:hover {
+      filter: grayscale(70%);
+      opacity: 0.9; 
+      .card__title{
+        opacity:1;
+        padding-top:0;
+        font-size:$fontSizeTitle;
+      }
+      li{
+        font-weight: bold;
+        color: 	white;
+        opacity: 1;
+        font-size:$fontSizeContent ;
+        &:nth-of-type(1){
+          padding-left: 0;
+          padding-top: $paddingTop ;
+        }
+        &:nth-of-type(2){ 
+            padding-top: $paddingTop ;
+            padding-right: 0;
+            }
+          }
+        }
+}
