--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -177,6 +177,7 @@ html {
       &:nth-of-type(1) {
         grid-column: 1 / 3;
         grid-row: 1 / 4;
+        @include hover-effect-photo(2.3em,1.2em,3em);
       }
       
       &:nth-of-type(2) {
@@ -184,6 +185,8 @@ html {
 
         grid-column: 3 / 4;
         grid-row: 1 / 3;
+
+        @include hover-effect-photo(2.3em,1em,2.7em);
       }
   
       &:nth-of-type(3) {
@@ -191,6 +194,7 @@ html {
 
         grid-column: 3 / 4;
         grid-row: 3 / 5;
+        @include hover-effect-photo(2.3em,0.8em,2.7em);
       }
   
       &:nth-of-type(4) {
@@ -198,88 +202,18 @@ html {
 
         grid-column: 2 / 3;
         grid-row: 4 / 5;
+        @include hover-effect-photo(2.3em,0.6em,2.7em);
       }
   
       &:nth-of-type(5) {
         grid-column: 1 / 2;
         grid-row: 4 / 5;
+        @include hover-effect-photo(2.3em,0.6em,2.7em);
       }
-    }
-     
-    .card__content{
-      position: relative;
-      top: 25%;
-      .card__content--info{
-        li{
-          opacity:0;
-          font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
-          text-decoration: none;
-          transition-property: all;
-          transition:  0.86s;
-          color: white;
-          text-align: center;
-          &:nth-of-type(1){
-            padding-left:10em;
-          }
-          &:nth-of-type(2){ 
-              padding-right: 10em;
-          }
-        }
-      }
-      .card__title{
-        opacity:0;
-        font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
-        text-align: center;
-        padding-top: 10em;
-        text-decoration: none;
-        transition-property: all;
-        transition:  0.86s;
-        font-size: 1.5em;
-        color: white;
-      }
-    }
-    .card{
-    &:after{
-      content:'';
-      position: absolute;
-      top:0;
-      left:0;
-      width: 100%;
-      height: 100%;
-      border-top: 1px solid white;
-      border-bottom: 1px solid white;
-      transition: 0.35s;
-      transform: rotate(25deg) scale3d(1,0,1);
-    }
-  }
-    .card:hover:after{
-        transform: rotate(45deg) scale3d(1,1,1);
-    }
-
-    .card:hover {
-      filter: grayscale(40%);
-      opacity: 0.7; 
-      .card__title{
-        opacity:1;
-        padding-top:0;
-        font-size:2.3em;
-      }
-      li{
-        opacity: 1;
-        font-size:1.2em;
-        &:nth-of-type(1){
-          padding-left: 0;
-          padding-top: 3em;
-        }
-        &:nth-of-type(2){ 
-            padding-top: 3em;
-            padding-right: 0;
-        }
-      }
-
     }
   }
 }
+
 
 .listings {
   padding: 2em 7em;
