--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -174,6 +174,7 @@ html {
     grid-template-rows: 33.33% repeat(2, 16.66%)  33.33%;
 
     .grid__item {
+      text-decoration: none;
       &:nth-of-type(1) {
         grid-column: 1 / 3;
         grid-row: 1 / 4;
