--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,6 +10,7 @@ html {
 
   body {
     height: 100%;
+    width: 100%;
     position: relative;
 
     font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
@@ -319,6 +320,123 @@ html {
     background-color: #CAD3C8;
     transform: rotate(-4.5deg) translateY(-85px);
     z-index: -1;
+
+  }
+}
+
+.listings__form{
+  padding:5%;
+  display: grid;
+  grid-template-columns: auto 100%;
+  grid-template-rows: 1fr;
+  justify-items: center;
+  height: 100%;
+  .listings__form-list{
+    
+        display: grid;
+        grid-column: 1;
+        margin-right: 1em;
+       .list-step{
+        display: grid;
+        grid-template-rows: auto 1fr;
+        height: 100%;
+         span{
+           position: relative;
+          width: 2em;
+          height: 2em;
+          border-radius: 50%;
+          color: #FFF;
+          background-color:#2980b9;
+          place-items: center;
+          display: grid;
+          line-height: 1;
+          &:before{
+            content: '';
+            position: absolute;
+            width: 250%;
+            height: 250%;
+            border: solid 5px grey;
+            border-radius: 50%;
+            transform: scale(0.6);
+            
+          }
+         }
+         &::before{
+          border-right:2px solid black;
+         }
+         &::after{
+          border-right:2px solid red;
+         }
+         &:before,
+         &:after{
+          content: '';
+          display: block;
+          grid-row: 2;
+          grid-column: 1;
+          
+          width: 2em;
+          width: 0px;
+          margin: 0 auto;
+         }
+         &:last-child::before,
+         &:last-child::after {
+           display: none; 
+         }
+       }
+       
+  }
+  .input__box{
+    grid-row: 1;
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 30em;
+    .box__h1{
+      font-family: 'Droid Serif', Georgia, Times, serif;
+      text-decoration: none;
+      color:hsla(204, 70%, 53%, 1);
+      
+    }
+    .box__step{
+      opacity: 0.8;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color:grey; 
+    }
+    .box__p{
+      margin-bottom: 2em;
+      color:hsla(204, 70%, 53%, 0.8);
+
+    }
+    input{
+        appearance: none;
+        border: 1px solid #CCC;
+        border-radius: 2px;
+        padding: 0.5em;
+        transition: border-color .3s ease;
+        
+    }
+    button{
+      appearance: none;
+      background: hsla(204, 70%, 53%, 1) ;
+      border: none;
+      border-radius: 2px;
+      padding: 1rem;
+      display: inline-block;
+      color: white;
+      text-transform: uppercase;
+      font-size: .75em;
+      letter-spacing: 2px;
+      width: auto;
+      margin-top: 1em;
+      transition: all 0.75s;
+      opacity:0.5;
+      &:hover{
+        opacity:1;
+      }
+    }
 
   }
 }
