--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -81,6 +81,7 @@ html {
 
   .nav--dropdown {
     margin-left: 1em;
+
     display: inline-block;
     font-size: 1.4em;
    
@@ -103,7 +104,6 @@ html {
 
     &:hover .dropdown__button > a {
       color: hsl(28, 80%, 50%);
-
       &:before,
       &:after {
         opacity: 1;
@@ -121,6 +121,7 @@ html {
     .dropdown__content {
       display: none;
       position: absolute;
+      
       transition: all .2s ease-in-out;
       z-index: 1;
 
@@ -128,6 +129,7 @@ html {
         padding-left: 1em;
         display: flex;
         flex-flow: column nowrap;
+
         background-color: hsla(204, 70%, 53%, 0.9);
 
         li {
@@ -175,43 +177,41 @@ html {
 
     .grid__item {
       text-decoration: none;
-
       &:nth-of-type(1) {
-        @include hover-effect-photo(2.3em,1.2em,3em);
-
         grid-column: 1 / 3;
         grid-row: 1 / 4;
+        @include hover-effect-photo(2.3em,1.2em,3em);
       }
       
       &:nth-of-type(2) {
-        @include hover-effect-photo(2.3em,1em,2.7em);
-        
         margin-left: 1em;
+
         grid-column: 3 / 4;
         grid-row: 1 / 3;
+
+        @include hover-effect-photo(2.3em,1em,2.7em);
       }
   
       &:nth-of-type(3) {
-        @include hover-effect-photo(2.3em,0.8em,2.7em);
-
         margin-left: 1em;
+
         grid-column: 3 / 4;
         grid-row: 3 / 5;
+        @include hover-effect-photo(2.3em,0.8em,2.7em);
       }
   
       &:nth-of-type(4) {
-        @include hover-effect-photo(2.3em,0.6em,2.7em);
-
         margin-left: 1em;
+
         grid-column: 2 / 3;
         grid-row: 4 / 5;
+        @include hover-effect-photo(2.3em,0.6em,2.7em);
       }
   
       &:nth-of-type(5) {
-        @include hover-effect-photo(2.3em,0.6em,2.7em);
-
         grid-column: 1 / 2;
         grid-row: 4 / 5;
+        @include hover-effect-photo(2.3em,0.6em,2.7em);
       }
     }
   }
@@ -229,40 +229,35 @@ html {
     grid-template-areas: "a a";
     grid-column-gap: 0.2em;
     grid-auto-rows: 60%;
-
     .grid__item{
       @include hover-effect-photo(2em,1em,0.5em);
-      
       text-decoration: none;
     }
   }
 }
-.listings {
-  .listings__nav {
-    margin-bottom: 1em; 
+.listings{
+  .listings__nav{
     display:flex;
     justify-content: space-between;
+    margin-bottom: 1em; 
     height: 10%;
   }
-
-  .search__wrapper {
+  .search__wrapper{
     border: 1px solid grey;
     width: 45%;
     height: 70%;
     border-radius: 25px;
-  
     .search__button,
-    .search__box {
+    .search__box{
       margin-top: 0.5em;
       margin-left:2em;
     }
-
-    .search__box {
+    .search__box,
+    {
       height:70%;  
       width: 56%;
     }
-
-    .search__button {
+    .search__button{
       height:70%;
       width: 25%;
       color:hsl(210, 29%, 65%);
@@ -271,23 +266,21 @@ html {
       background-color: 	hsl(204, 70%, 86%);
       transition: opacity .35s ease-in-out;
     }
-
-    .search__button:hover {
-      opacity:0.5; 
+    .search__button:hover{
+      opacity:0.5;
+     
     }
   }
-
-  button {
-    height:70%;
-    width: 20%;
-    background-color:	hsl(204, 70%, 86%);
+  button{
+    background-color: 	hsl(204, 70%, 86%);
     color:hsl(210, 29%, 65%);
     font-size: 1em;
     font-weight: bold;
+    height:70%;
+    width: 20%;
     transition: all .35s ease-in-out;
   }
-
-  button:hover {
+  button:hover{
     opacity:0.5;
     font-size:1.3em;
   }
@@ -299,6 +292,7 @@ html {
   width: 100%; 
   position: fixed;
   bottom: 0;
+
   color: #3B3B98;
 
   ul {
@@ -326,147 +320,133 @@ html {
     background-color: #CAD3C8;
     transform: rotate(-4.5deg) translateY(-85px);
     z-index: -1;
+
   }
 }
 
-.listings__form {
+.listings__form{
   padding:5%;
-  height: 100%;
-
   display: grid;
   grid-template-columns: auto 100%;
   grid-template-rows: 1fr;
   justify-items: center;
-
-  .listings__form-list {
-    display: grid;
-    grid-column: 1;
-    margin-right: 1em;
-
-    .list-step {
-      display: grid;
-      grid-template-rows: auto 1fr;
-      height: 100%;
-
-      span {
-        position: relative;
-        width: 2em;
-        height: 2em;
-        border-radius: 50%;
-        color: #FFF;
-        background-color:#2980b9;
-        // place-items: center;
+  height: 100%;
+  .listings__form-list{
+    
         display: grid;
-        line-height: 1;
-
-        &:before {
-          content: "";
-          position: absolute;
-          width: 250%;
-          height: 250%;
-          border: solid 5px hsla(204, 70%, 53%, 1);
-          border-radius: 50%;
-          transform: scale(0.6);
-          opacity:0
-        }
-      }
-
-      &:before {
-        border-right:2px solid grey;
-      }
-
-      &:after {
-        border-right:2px solid hsla(204, 70%, 53%, 0.9);
-        opacity:0;
-      }
-
-      &:before,
-      &:after {
-        content: "";
-        display: block;
-        grid-row: 2;
         grid-column: 1;
-        
-        width: 2em;
-        width: 0px;
-        margin: 0 auto;
-      }
-
-      &:last-child:before,
-      &:last-child:after {
-        display: none; 
-      }
-
-      &:first-child {
-        &:after {
-          opacity: 1;
-        }
-
-        span:before {
-          opacity: 1;
-        }
-      }
-    }    
+        margin-right: 1em;
+       .list-step{
+        display: grid;
+        grid-template-rows: auto 1fr;
+        height: 100%;
+         span{
+           position: relative;
+          width: 2em;
+          height: 2em;
+          border-radius: 50%;
+          color: #FFF;
+          background-color:#2980b9;
+          place-items: center;
+          display: grid;
+          line-height: 1;
+          &:before{
+            content: '';
+            position: absolute;
+            width: 250%;
+            height: 250%;
+            border: solid 5px hsla(204, 70%, 53%, 1);
+            border-radius: 50%;
+            transform: scale(0.6);
+            opacity:0
+          }
+         }
+         &::before{
+          border-right:2px solid grey;
+         }
+         &::after{
+          border-right:2px solid hsla(204, 70%, 53%, 0.9);
+          opacity:0;
+         }
+         &:before,
+         &:after{
+          content: '';
+          display: block;
+          grid-row: 2;
+          grid-column: 1;
+          
+          width: 2em;
+          width: 0px;
+          margin: 0 auto;
+         }
+         &:last-child::before,
+         &:last-child::after {
+           display: none; 
+         }
+         &:first-child{  
+          &::after{
+              opacity:1;
+            }
+            span:before{
+              opacity:1;
+            }
+         }
+       }
+       
   }
-
-  .input__box {
+  .input__box{
     grid-row: 1;
     grid-column: 2;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     max-width: 30em;
-
-    .box__h1 {
+    .box__h1{
       font-family: 'Droid Serif', Georgia, Times, serif;
       text-decoration: none;
       color:hsla(204, 70%, 53%, 1);
+      
     }
-
-    .box__step {
+    .box__step{
       opacity: 0.8;
       font-weight: bold;
       letter-spacing: 1px;
       color:grey; 
     }
-
-    .box__p {
+    .box__p{
       margin-bottom: 2em;
       color:hsla(204, 70%, 53%, 0.8);
-    }
 
-    input {
+    }
+    input{
         appearance: none;
         border: 1px solid #CCC;
         border-radius: 2px;
         padding: 0.5em;
         transition: border-color .3s ease;
+        
     }
-
-    button {
-      padding: 1rem;
-      margin-top: 1em;
-      border: none;
-      border-radius: 2px;
-
-      width: auto;
-      display: inline-block;
-
+    button{
       appearance: none;
       background: hsla(204, 70%, 53%, 1) ;
+      border: none;
+      border-radius: 2px;
+      padding: 1rem;
+      display: inline-block;
       color: white;
-
       text-transform: uppercase;
       font-size: .75em;
       letter-spacing: 2px;
+      width: auto;
+      margin-top: 1em;
       transition: all 0.75s;
       opacity:0.5;
-
-      &:hover {
+      &:hover{
         opacity:1;
       }
     }
+    
+
   }
 }
