--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -56,38 +56,7 @@
   }
 }
 @mixin hover-effect-photo($fontSizeTitle,$fontSizeContent,$paddingTop){
-  .card__content{
-    z-index:1;
-  position: relative;
-  top: 25%;
-  .card__content--info{
-    li{
-      opacity:0;
-      font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
-      text-decoration: none;
-      transition-property: all;
-      transition:  0.86s;
-      text-align: center;
-      &:nth-of-type(1){
-        padding-left:10em;
-      }
-      &:nth-of-type(2){ 
-          padding-right: 10em;
-      }
-    }
-  }
-  .card__title{
-    opacity:0;
-    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
-    text-align: center;
-    padding-top: 10em;
-    text-decoration: none;
-    transition-property: all;
-    transition:  0.86s;
-    font-size: 1.5em;
-    color: white;
-  }
-  }
+
   .card{
     &:after{
       content:'';
@@ -114,7 +83,7 @@
         padding-top:0;
         font-size:$fontSizeTitle;
       }
-      li{
+      .card__content--li{
         font-weight: bold;
         color: 	white;
         opacity: 1;
