--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -5,6 +5,38 @@
   opacity: 0.9;
   transition: opacity 0.35s, transform 0.5s;
   z-index:0;
+  .card__content{
+    z-index:1;
+  position: relative;
+  top: 25%;
+  .card__content--info{
+    .card__content--li{
+      opacity:0;
+      font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+      text-decoration: none;
+      transition-property: all;
+      transition:  0.86s;
+      text-align: center;
+      &:nth-of-type(1){
+        padding-left:10em;
+      }
+      &:nth-of-type(2){ 
+          padding-right: 10em;
+      }
+    }
+  }
+  .card__title{
+    opacity:0;
+    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+    text-align: center;
+    padding-top: 10em;
+    text-decoration: none;
+    transition-property: all;
+    transition:  0.86s;
+    font-size: 1.5em;
+    color: white;
+  }
+  }
 }
 
 .grid__item {
