--- a/assets/scss/listings.scss
+++ b/assets/scss/listings.scss
@@ -1,58 +1,164 @@
 .listings{
-    .listings__nav{
-      display:flex;
-      justify-content: space-between;
-      margin-bottom: 1em; 
-      height: 10%;
+  .listings__nav{
+    display:flex;
+    justify-content: space-between;
+    margin-bottom: 1em; 
+    height: 10%;
+  }
+  .search__wrapper{
+    border: 1px solid grey;
+    width: 45%;
+    height: 70%;
+    border-radius: 25px;
+    .search__button,
+    .search__box{
+      margin-top: 0.5em;
+      margin-left:2em;
     }
-    .search__wrapper{
-      display:flex;
-      justify-content: center;
-      border: 1px solid grey;
-      width: 45%;
-      height: 70%;
-      border-radius: 25px;
-      .search__button,
-      .search__box{
-        margin-top: 0.5em;
-        margin-left:2em;
-      }
-      .search__box,
-      {
-        height:70%;  
-        width: 56%;
-      }
-      .search__button{
-        height:70%;
-        width: 25%;
-        color:hsl(210, 29%, 65%);
-        font-size: 1em;
-        font-weight: bold;
-        background-color: 	hsl(204, 70%, 86%);
-        transition: opacity .35s ease-in-out;
-      }
-      .search__button:hover{
-        opacity:0.5;
-      }
+    .search__box,
+    {
+      height:70%;  
+      width: 56%;
     }
-    .listings__nav__button--new,
-    .listings__nav__button--messages{
-      background-color: 	hsl(204, 70%, 86%);
+    .search__button{
+      height:70%;
+      width: 25%;
       color:hsl(210, 29%, 65%);
       font-size: 1em;
       font-weight: bold;
-      height:70%;
-      width: 20%;
-      transition: all .35s ease-in-out;
+      background-color: 	hsl(204, 70%, 86%);
+      transition: opacity .35s ease-in-out;
     }
-    button:hover{
+    .search__button:hover{
       opacity:0.5;
-      font-size:1.3em;
+     
     }
+  }
+  .listings__nav--new,
+  .listings__nav--messages{
+    background-color: 	hsl(204, 70%, 86%);
+    color:hsl(210, 29%, 65%);
+    font-size: 1em;
+    font-weight: bold;
+    height:70%;
+    width: 20%;
+    transition: all .35s ease-in-out;
+  }
+  button:hover{
+    opacity:0.5;
+    font-size:1.3em;
+  }
 }
 
+.footer {
+  display: none;
+  padding: 1.2em;
+  width: 100%; 
+  position: fixed;
+  bottom: 0;
 
-.form__section {
+  color: #3B3B98;
+
+  ul {
+    @include flex-nav;
+
+    transform: translateY(-.5em);
+
+    li a {
+      position: relative;
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+
+  &:before { 
+    content: "";
+    padding: 5em 0;
+    display: block;
+    width: 200%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #CAD3C8;
+    transform: rotate(-4.5deg) translateY(-85px);
+    z-index: -1;
+
+  }
+}
+
+.listings__form{
+  padding:5%;
+  display: grid;
+  grid-template-columns: auto 100%;
+  grid-template-rows: 1fr;
+  justify-items: center;
+  height: 100%;
+  .listings__form-list{
+    
+        display: grid;
+        grid-column: 1;
+        margin-right: 1em;
+       .list-step{
+        display: grid;
+        grid-template-rows: auto 1fr;
+        height: 100%;
+         span{
+           position: relative;
+          width: 2em;
+          height: 2em;
+          border-radius: 50%;
+          color: #FFF;
+          background-color:#2980b9;
+          place-items: center;
+          display: grid;
+          line-height: 1;
+          &:before{
+            content: '';
+            position: absolute;
+            width: 250%;
+            height: 250%;
+            border: solid 5px hsla(204, 70%, 53%, 1);
+            border-radius: 50%;
+            transform: scale(0.6);
+            opacity:0
+          }
+         }
+         &::before{
+          border-right:2px solid grey;
+         }
+         &::after{
+          border-right:2px solid hsla(204, 70%, 53%, 0.9);
+          opacity:0;
+         }
+         &:before,
+         &:after{
+          content: '';
+          display: block;
+          grid-row: 2;
+          grid-column: 1;
+          
+          width: 2em;
+          width: 0px;
+          margin: 0 auto;
+         }
+         &:last-child::before,
+         &:last-child::after {
+           display: none; 
+         }
+         &:first-child{  
+          &::after{
+              opacity:1;
+            }
+            span:before{
+              opacity:1;
+            }
+         }
+       }
+       
+  }
+  .form__section{
     grid-row: 1;
     grid-column: 2;
     display: flex;
@@ -66,7 +172,7 @@
       color:hsla(204, 70%, 53%, 1);
       
     }
-    .form__section--currentStep{
+    .form__section--curentQuestion{
       opacity: 0.8;
       font-weight: bold;
       letter-spacing: 1px;
@@ -104,75 +210,7 @@
         opacity:1;
       }
     }
+    
+
   }
-  .listings__form{
-    padding:5%;
-    display: grid;
-    grid-template-columns: auto 100%;
-    grid-template-rows: 1fr;
-    justify-items: center;
-    height: 100%;
-    .listings__form--list{
-      
-          display: grid;
-          grid-column: 1;
-          margin-right: 1em;
-         .list-step{
-          display: grid;
-          grid-template-rows: auto 1fr;
-          height: 100%;
-           span{
-             position: relative;
-            width: 2em;
-            height: 2em;
-            border-radius: 50%;
-            color: #FFF;
-            background-color:#2980b9;
-            place-items: center;
-            display: grid;
-            line-height: 1;
-            &:before{
-              content: '';
-              position: absolute;
-              width: 250%;
-              height: 250%;
-              border: solid 5px hsla(204, 70%, 53%, 1);
-              border-radius: 50%;
-              transform: scale(0.6);
-              opacity:0
-            }
-           }
-           &::before{
-            border-right:2px solid grey;
-           }
-           &::after{
-            border-right:2px solid hsla(204, 70%, 53%, 0.9);
-            opacity:0;
-           }
-           &:before,
-           &:after{
-            content: '';
-            display: block;
-            grid-row: 2;
-            grid-column: 1;
-            
-            width: 2em;
-            width: 0px;
-            margin: 0 auto;
-           }
-           &:last-child::before,
-           &:last-child::after {
-             display: none; 
-           }
-           &:first-child{  
-            &::after{
-                opacity:1;
-              }
-              span:before{
-                opacity:1;
-              }
-           }
-         }   
-    }
-  }
-  
+}
