--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,6 +4,7 @@
 @import "mixins";
 @import "card";
 @import "listings";
+@import "listingsForm";
 html {
   height: 100%;
   font-size: 16px; 
@@ -26,7 +27,7 @@ html {
   padding: 1em;
   width: 100%;
   position: relative;
-
+ 
   color: hsl(210, 29%, 29%);
   background-color: hsla(204, 70%, 53%, 0.3);
 
