--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "card";
 @import "listings";
 @import "listingsForm";
+
 html {
   height: 100%;
   font-size: 16px; 
@@ -168,72 +169,32 @@ html {
 .places {
   padding: 2em 7em;
 
-  .grid {
+  .grid--main--page {
     height: calc(100% - 7em);
 
-    display: grid;
-    grid-row-gap: 1.2em;
-    grid-template-columns: repeat(2, 30%) 40%;
-    grid-template-rows: 33.33% repeat(2, 16.66%)  33.33%;
-
-    .grid__item {
-      text-decoration: none;
-      &:nth-of-type(1) {
-        grid-column: 1 / 3;
-        grid-row: 1 / 4;
-        @include hover-effect-photo(2.3em,1.2em,3em);
+    @media only screen and (min-width:801px) {
+         @include home-page-grid();
       }
-      
-      &:nth-of-type(2) {
-        margin-left: 1em;
-
-        grid-column: 3 / 4;
-        grid-row: 1 / 3;
-
-        @include hover-effect-photo(2.3em,1em,2.7em);
+    @media only screen and (max-width:800px ) {
+         @include one-column-grid();
       }
-  
-      &:nth-of-type(3) {
-        margin-left: 1em;
-
-        grid-column: 3 / 4;
-        grid-row: 3 / 5;
-        @include hover-effect-photo(2.3em,0.8em,2.7em);
-      }
-  
-      &:nth-of-type(4) {
-        margin-left: 1em;
-
-        grid-column: 2 / 3;
-        grid-row: 4 / 5;
-        @include hover-effect-photo(2.3em,0.6em,2.7em);
-      }
-  
-      &:nth-of-type(5) {
-        grid-column: 1 / 2;
-        grid-row: 4 / 5;
-        @include hover-effect-photo(2.3em,0.6em,2.7em);
-      }
-    }
   }
 }
-
 
 .listings,
 .allPlaces{
   padding: 2em 7em;
-
+ 
   .grid--twoColumns {
     height: calc(100% - 7em);
-    display: grid;
-    grid-row-gap: 1.2em;
-    grid-template-areas: "a a";
-    grid-column-gap: 0.2em;
-    grid-auto-rows: 60%;
-    .grid__item{
-      @include hover-effect-photo(2em,1em,0.5em);
-      text-decoration: none;
+
+    @media only screen and (min-width:651px) {
+      @include two-columns-grid();
     }
+    @media only screen and (max-width:650px ) {
+      @include one-column-grid();
+   }
+   
   }
 }
 
