--- a/assets/scss/listingsForm.scss
+++ b/assets/scss/listingsForm.scss
@@ -5,7 +5,7 @@
   grid-template-columns: auto 100%;
   grid-template-rows: 1fr;
   justify-items: center;
-  height: 89%;
+  overflow: hidden;
 
   .listings__form-list {
     display: grid;
@@ -19,14 +19,14 @@
       height: 100%;
 
       span {
+        display: grid;
+        place-items: center;
         position: relative;
         width: 3em;
         height: 3em;
         border-radius: 50%;
         color: #fff;
         background-color: grey;
-        display: grid;
-        line-height: 1;
       }
 
       &:before {
@@ -34,11 +34,14 @@
         display: block;
         grid-row: 2;
         grid-column: 1;
-        width: 2em;
-        width: 0px;
-        margin: 0 auto;
-        border-right: 4px solid currentColor;
+
+        position: relative;
+        left: 50%;
+        height: 35px;
+        width: 4px;
+        background-color: currentColor;
         transition: color 0.5s ease;
+        transform: translateX(-50%);
       }
 
       &:last-child::before,
@@ -48,6 +51,7 @@
 
       &:first-child {
         color: hsla(204, 70%, 53%, 0.9);
+        
         span {
           background-color: hsla(204, 70%, 53%, 0.9);
         }
@@ -63,12 +67,19 @@
     grid-row: 1;
     grid-column: 2;
 
-    opacity: 0;
-    transform: translateY(-80em);
-
-    transition: opacity 2s linear, transform 1.5s cubic-bezier(0.5, 0, 0.5, 1),
-      visibility 0s linear 2s;
+    transition: opacity .4s ease-in-out, transform .7s ease-out .15s;
     max-width: 30em;
+
+    &.is-visible {
+      transform: translateY(0);
+      opacity: 1;
+    }
+
+    &.hidden {
+      transform: translateY(100%);
+      opacity: 0;
+      pointer-events: none;
+    }
 
     .form__section--h1 {
       font-family: "Droid Serif", Georgia, Times, serif;
@@ -118,11 +129,6 @@
       &:hover {
         opacity: 1;
       }
-    }
-    &:nth-of-type(1) {
-      transform: translateY(0);
-      opacity: 1;
-      visibility: visible;
     }
   }
 }
