--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,2 +1,11 @@
-$impossible-calculation: 16.665;
+
 $index:1;
+
+//break points 
+
+$mobile: 320px;
+$xsmall: 480px;
+$small: 740px;
+$lap: 900px;
+$desk: 1200px;
+$large: 1400px;
