--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -20,7 +20,7 @@ html {
     width: 100%;
     position: relative;
 
-    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
 
     .container {
       height: 100%;
