--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -6,18 +6,29 @@
   opacity: 0.9;
   transition: opacity 0.35s, transform 0.5s;
 
-  &:after {
-    content: "";
-    position: absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
-    transition: 0.35s;
-    transform: rotate(25deg) scale3d(1,0,1);
-  }
+  // &:before,
+  // &:after {
+  //   content: "";
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 3px;
+  //   background-color: white;
+
+  //   transition: opacity .2s ease-in-out .05s, transform .25s ease-in-out;
+  //   opacity: 0;
+  //   transform-origin: center center;
+  //   transform: rotate(45deg);
+  // }
+
+  // &:before {
+  //   bottom: 20%;
+  //   left: -33%;
+  // }
+
+  // &:after {
+  //   top: 20%;
+  //   left: 33%;
+  // }
 
   .card__image {
     height: 100%;
@@ -26,12 +37,12 @@
   .card__content {
     padding: .5em;
     position: absolute;
-    top: 1em;
+    top: 25%;
     left: 50%;
-
-    text-decoration: none;
+    width: 100%;
+    
     text-align: center;
-    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+    text-decoration: none;
 
     color: white;
     background-color: hsla(0, 50%, 0%, 0.5);
@@ -56,7 +67,7 @@
   &:hover .card,
   &:focus .card {
     transform: scale(1.1);
-    opacity: .7;
+    // opacity: .9;
   }
 
   .card {
