card design for the listings page

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -33,9 +33,11 @@ html {
   display: flex;
 }
 
-.main-content,
-.places, 
-.listings,
+.main-content {
+  margin: 1em 5em;
+}
+
+.places,
 .allPlaces {
   height: 100%;
 }
@@ -55,14 +57,13 @@ html {
   }
 }
 
-.listings,
-.allPlaces{
+.allPlaces {
   padding: 2em 7em;
  
   .grid--twoColumns {
     height: calc(100% - 7em);
 
-    @include query-above($small)  {
+    @include query-above($small) {
       @include two-columns-grid();
     }
     @include query-below($small) {
