--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -20,6 +20,7 @@ html {
     width: 100%;
     position: relative;
 
+    background-color: #edf1f2;
     font-family: 'IBM Plex Sans', sans-serif;
 
     .container {
@@ -37,6 +38,7 @@ html {
   margin: 1em 5em;
 }
 
+.main-content,
 .places,
 .allPlaces {
   height: 100%;
