--- a/assets/scss/components/listings.scss
+++ b/assets/scss/components/listings.scss
@@ -9,13 +9,13 @@
   .listings__nav {
     display: flex;
     
-    @include query-above($small) {
+    @include query-above($lap) {
       justify-content: space-between;
       margin-bottom: 1em; 
       height: 10%;
     }
 
-    @include query-below($small) {
+    @include query-below($lap) {
       flex-direction: column;
       justify-content: space-between;
       align-content: center;
@@ -26,7 +26,7 @@
     display: flex;
     justify-content:center;
    
-    @include query-above($small){
+    @include query-above($lap){
       border: 1px solid grey;
       width: 45%;
       height: 70%;
@@ -65,10 +65,11 @@
     font-size: 1em;
     font-weight: bold;
 
-    @include query-above($small){
+    @include query-above($lap){
       height:70%;
       width: 20%;
     }
+    
     transition: all .35s ease-in-out;
   }
 
@@ -179,11 +180,50 @@
           background-color: hsl(283, 39%, 53%);
           color: white;
         }
+
+        @include query-below($xsmall) {
+          flex-direction: column;
+          align-items: center;
+
+          .listing__content {
+            max-width: none;
+          }
+
+          .listing__meta {
+            justify-content: center;
+          }
+        }
       }
     }
   }
   
-  @include query-below($small){
+  
+
+  // @include query-below($large) {
+  //   padding: 1em 15em;
+  // }
+
+  // @include query-below($desk) {
+  //   padding: 1em 10em;
+  // }
+
+  @include query-above($default) {
+    padding: 1em 0;
+  }
+
+  @include query-above($small) {
+    padding: 1em 5em;
+  }
+
+  @include query-above($desk) {
+    padding: 1em 10em;
+  }
+
+  @include query-above($large) {
+    padding: 1em 20em;
+  }
+
+  @include query-below($lap){
     .listings__nav--new,
     .listings__nav--messages,
     .search__wrapper{
@@ -191,3 +231,13 @@
     }
   }
 }
+
+@include query-above($default) {
+  margin: 1em 0;
+}
+
+// @include query-below($large) {
+//   .main-content.main-content--listings {
+//     margin: 1em 3em;
+//   }
+// }
