--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -36,6 +36,14 @@ html {
 
 .main-content {
   margin: 1em 5em;
+
+  @include query-below($lap) {
+    margin: 1em 2.5em;
+  }
+
+  @include query-below($small) {
+    margin: 1em 1em;
+  }
 }
 
 .main-content,
@@ -51,11 +59,16 @@ html {
     height: 100%;
 
     @include query-above($small) {
-         @include home-page-grid();
-      }
-      @include query-below($small) {
-         @include one-column-grid();
-      }
+        @include home-page-grid;
+    }
+
+    @include query-below($small) {
+        @include one-column-grid;
+    }
+  }
+
+  @include query-below($lap) {
+    padding: 0;
   }
 }
 
@@ -66,10 +79,10 @@ html {
     height: calc(100% - 7em);
 
     @include query-above($small) {
-      @include two-columns-grid();
+      @include two-columns-grid;
     }
     @include query-below($small) {
-      @include one-column-grid();
+      @include one-column-grid;
    }
    
   }
