--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -3,9 +3,10 @@ $index:1;
 
 //break points 
 
+$default: 0;
 $mobile: 320px;
-$xsmall: 480px;
+$xsmall: 550px;
 $small: 740px;
-$lap: 900px;
-$desk: 1200px;
-$large: 1400px;
+$lap: 970px;
+$desk: 1048px;
+$large: 1300px;
