--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,7 +10,7 @@
 @import "components/footer";
 @import "components/listings";
 @import "components/add-listing";
-
+@import "components/place";
 html {
   height: 100%;
   font-size: 16px; 
@@ -87,4 +87,6 @@ html {
    
   }
 }
+
+
 
