account page design

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,6 +10,7 @@
 @import "components/footer";
 @import "components/listings";
 @import "components/add-listing";
+@import "components/account";
 
 html {
   height: 100%;
